(#539) fixed gdoc export styling + generation issues
- fixes layout issues + added icons
- fixes spacing issues
- minor styling changes + fixed material view after import
- fuxes generation issues with cleaning folders

--- a/app/assets/stylesheets/print/gdoc/lesson/_hr.scss
+++ b/app/assets/stylesheets/print/gdoc/lesson/_hr.scss
@@ -1,7 +1,7 @@
 .o-ld-hr {
   @include m(l1) {
     padding-bottom: map-get($gdoc-spacing, large);
-    padding-top: map-get($gdoc-spacing, large);
+    //padding-top: map-get($gdoc-spacing, large);
   }
 
   @include m(l2) {
