--- a/app/assets/stylesheets/print/gdoc/lesson/_icons.scss
+++ b/app/assets/stylesheets/print/gdoc/lesson/_icons.scss
@@ -1,16 +1,5 @@
-.o-gdoc-icon {
-  background-size: cover;
-  display: inline-block;
-
-  @for $i from 1 through 3 {
-    @include m('priority#{$i}') {
-      background-image: asset-data-url('lessons/ld_p#{$i}.png');
-    }
-  }
-}
-
 .o-ld-icon {
   display: inline-block;
-  height: 20pt;
-  width: 20pt;
+  height: 12.5pt;
+  width: 12.5pt;
 }
