--- a/app/assets/stylesheets/print/gdoc/lesson/_smp.scss
+++ b/app/assets/stylesheets/print/gdoc/lesson/_smp.scss
@@ -4,6 +4,6 @@
     border-right: 2pt solid map-get($ub-colorcodes, math-base) !important;
     border-top: 2pt solid map-get($ub-colorcodes, math-base) !important;
     vertical-align: middle;
-    width: 5%;
+    width: 8%;
   }
 }
